--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.1.7",
     "@react-navigation/stack": "^5.2.14",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-wolox-react-native": "^1.0.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-prettier": "^3.1.3",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
@@ -33,8 +37,8 @@
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
+    "prettier": "^2.0.5",
     "react-test-renderer": "16.11.0",
-    "prettier": "^2.0.4",
     "typescript": "^3.8.3"
   },
   "jest": {
