--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^5.4.1",
     "@react-navigation/native": "^5.2.6",
     "@react-navigation/stack": "^5.3.1",
+    "@types/react-redux": "^7.1.8",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-wolox-react-native": "^1.0.1",
     "eslint-plugin-import": "^2.20.2",
@@ -23,7 +24,9 @@
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
-    "react-native-screens": "^2.7.0"
+    "react-native-screens": "^2.7.0",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
