--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^5.2.6",
     "@react-navigation/stack": "^5.3.1",
     "@types/react-redux": "^7.1.8",
+    "babel-plugin-module-resolver": "^4.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-wolox-react-native": "^1.0.1",
     "eslint-plugin-import": "^2.20.2",
