--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^5.2.6",
     "@react-navigation/stack": "^5.3.1",
     "@types/react-redux": "^7.1.8",
+    "apisauce": "^1.1.1",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-wolox-react-native": "^1.0.1",
@@ -22,12 +23,14 @@
     "eslint-plugin-prettier": "^3.1.3",
     "react": "16.11.0",
     "react-native": "0.62.2",
+    "react-native-config": "^1.0.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.8.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
