--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "@typescript-eslint/parser": "^2.31.0",
     "babel-jest": "^24.9.0",
     "babel-plugin-module-resolver": "^4.0.0",
+    "babel-runtime": "^6.26.0",
     "eslint": "^6.5.1",
     "jest": "^24.9.0",
     "metro-react-native-babel-preset": "^0.58.0",
     "prettier": "^2.0.5",
     "react-test-renderer": "16.11.0",
+    "redux-recompose": "^2.2.0",
     "typescript": "^3.8.3"
   },
   "jest": {
