--- a/ios/Podfile
+++ b/ios/Podfile
@@ -79,6 +79,8 @@ target 'WBooks' do
 
   pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
 
+  pod 'BVLinearGradient', :path => '../node_modules/react-native-linear-gradient'
+
   target 'WBooksTests' do
     inherit! :complete
     # Pods for testing
